Checking Index Vocabulary

--- a/notebook/Data_EDA.ipynb
+++ b/notebook/Data_EDA.ipynb
@@ -154,6 +154,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find NaN Values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -177,7 +184,6 @@
     }
    ],
    "source": [
-    "# Find NaN Values\n",
     "df.isnull().sum()"
    ]
   },
@@ -349,9 +355,53 @@
     }
    ],
    "source": [
-    "# Changes value label 2 to 1, 1 to 0\n",
     "df['label'] = df['label'].replace(2, 1).replace(3, 0)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/3.preprocessed/tweet_preprocessed_noNaN.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Count Positive and Negative Tweets\n",
+    "\n",
+    "Bagian ini untuk menghitung jumlah tweet positif dan negatif menggunakan data yang sudah di preprocessing. df['label'] merupakan data yang berisi label tweet positif atau negatif. df[df['label'] == 1] merupakan data tweet positif. df[df['label'] == 0] merupakan data tweet negatif. Label Neutral dimasukkan ke dalam data positif karena tidak terdapat tweet yang berunsur negatif. Lalu jumlah tweet positif dan negatif ditampilkan."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(668, 509)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['label'] == 1].shape[0], df[df['label'] == 0].shape[0]"
    ]
   },
   {
